[package]
name = "doc-comment"
version = "0.2.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

documentation = "http://docs.rs/crate/doc-comment"
repository = "https://github.com/GuillaumeGomez/doc-comment"
readme = "README.md"
license = "MIT"
description = "Macro to generate doc comments"

[lib]
name = "doc_comment"

[badges]
travis-ci = { repository = "GuillaumeGomez/doc-comment" }

[features]
no_core = []
