[package]
name = "doc-comment"
version = "0.3.3"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

documentation = "http://docs.rs/crate/doc-comment"
repository = "https://github.com/GuillaumeGomez/doc-comment"
readme = "README.md"
license = "MIT"
description = "Macro to generate doc comments"
build = "build.rs"

[lib]
name = "doc_comment"

[badges]
travis-ci = { repository = "GuillaumeGomez/doc-comment" }

[features]
no_core = []
old_macros = []
